<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="16dp"
        android:scrollbarStyle="outsideInset"
        tools:context=".DetailsActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
                android:id="@+id/tvTicketType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="24sp"
                tools:text="Bus ticket" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date" />

        <DatePicker
                android:id="@+id/dpStartDate"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date" />

        <DatePicker
                android:id="@+id/dpEndDate"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_category" />

        <RadioGroup
                android:id="@+id/rgPriceCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <RadioButton
                    android:id="@+id/rbFullPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/full_price" />

            <RadioButton
                    android:id="@+id/rbSenior"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/senior" />

            <RadioButton
                    android:id="@+id/rbPublicServant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/public_servant" />

        </RadioGroup>

        <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                tools:text="4200" />

        <Button
                android:id="@+id/btnPurchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/purchase_pass" />

    </LinearLayout>

</ScrollView>