<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4"
        tools:context=".ListActivity">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        <ImageButton
                android:id="@+id/btnBike"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:gravity="center"
                android:padding="0dp"
                android:src="@drawable/bikes" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/bike"
                android:textColor="@color/white"
                android:textSize="36sp" />

    </FrameLayout>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        <ImageButton
                android:id="@+id/btnBus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:gravity="center"
                android:padding="0dp"
                android:src="@drawable/bus" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/bus"
                android:textColor="@color/white"
                android:textSize="36sp"/>

    </FrameLayout>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        <ImageButton
                android:id="@+id/btnTrain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:gravity="center"
                android:padding="0dp"
                android:src="@drawable/trains" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/train"
                android:textColor="@color/white"
                android:textSize="36sp"/>

    </FrameLayout>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        <ImageButton
                android:id="@+id/btnBoat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:gravity="center"
                android:padding="0dp"
                android:src="@drawable/boat" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/boat"
                android:textColor="@color/white"
                android:textSize="36sp"/>

    </FrameLayout>
</LinearLayout>
<!-- JOYAXJ -->